--- a/VidlyRev/VidlyRev/Views/Customers/Index.cshtml
+++ b/VidlyRev/VidlyRev/Views/Customers/Index.cshtml
@@ -27,7 +27,7 @@
                 {
                     <tr>
                         <td>
-                            @Html.ActionLink(customer.Name, "Details", new { customer.Id })
+                            @Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)
 
                         </td>
                         <td>
