--- a/VidlyRev/VidlyRev/Views/Movies/MovieForm.cshtml
+++ b/VidlyRev/VidlyRev/Views/Movies/MovieForm.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Movie Form</h2>
+<h2>@Model.Title</h2>
 
 @using (Html.BeginForm("Save", "Movies"))
 {
